marketplace: fix scrollbar styling

--- a/client/src/commonStyles/base.scss
+++ b/client/src/commonStyles/base.scss
@@ -68,6 +68,9 @@ strong {
     background-color: rgba($layout-color, 0.1);
     width: 1rem;
   }
+  &::-webkit-scrollbar-corner {
+    background-color: transparent;
+  }
   &::-webkit-scrollbar-thumb {
     background-color: rgba($action-color, 0.4);
     &:hover {
